  dependencies right this shouldn't break applications; if your
  resources are included in the wrong order now, fix resource dependencies.

- base_url is not required anymore (as in the past); improve base_url
  management API so that integration packages like zope.fanstatic have
  a more explicit way to manage this information.

0.10.1 (2011-02-06)
===================

- Fixed issue #49.


0.10 (2011-01-19)
=================

- Renamed ``hashing`` to ``versioning``. Use the version of the python package
  as the version identifier for a Library, unless the package is installed in
  development mode. If a Library has no version or is in development, use the
  hash of the Library's directory contents as version identifier.

- Consolidated the Resource modes into ``debug`` and ``minified``.

- The injector component only sets up the NeededResources if the request method
  is GET or POST.

- The ``devmode`` parameter has been renamed to ``recompute_hashes`` in order
  to more aptly reflect its behavior. When recompute_hashes is True, hashes are
  recomputed for every request - this is the default behavior.


0.9b (2011-01-06)
=================

Fanstatic is a fundamental rewrite of `hurry.resource`_. As such, Fanstatic
breaks compatibility with hurry.resource. Here's a list of essential changes
since version 0.10 of hurry.resource:

- Fundamental API cleanups and changes.

- Fanstatic no longer depends on ZTK packages, and provides several 'pure' WSGI
  components. This allows for greater re-use in different WSGI-based frameworks.

- `zope.fanstatic`_ (a rewrite of `hurry.zoperesource`_) provides the integration of
  Fanstatic with the ZTK.

- Fanstatic adds a WSGI component for serving resources, offloading it from the
  application framework.

- Fanstatic adds 'infinite' caching functionality by computing a unique URL
  for every version of a resource.

- Fanstatic uses `py.test`_ for test discovery and execution.
